[package]
name = "rocket-app"
version = "0.1.0"
authors = ["author1B"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
base64 = "0.13"
diesel = { version = "1.4", features = ["sqlite", "r2d2"] }
diesel_migrations = "1.4"
# rusqlite = { version = "0.25.3", features = ["bundled"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_sqlite_pool"]
